tests/rosetta/out/Java/abbreviations-simple.error
javac error: exit status 1
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:81: error: cannot find symbol
    static Map<String,any> readTable(String table) {
                      ^
  symbol:   class any
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:44: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)xs.get(i)).doubleValue();
                                       ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:57: error: cannot find symbol
        M0123456789 digits = new M0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
  symbol:   class M0123456789
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:57: error: cannot find symbol
        M0123456789 digits = new M0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                                 ^
  symbol:   class M0123456789
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:87: error: incompatible types: String cannot be converted to List<String>
            List<String> cmd = toks.get(i);
                                       ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:97: error: incompatible types: List<String> cannot be converted to String
            cmds.add(cmd);
                     ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:100: error: cannot find symbol
        return new CommandsMins(cmds, mins);
                   ^
  symbol:   class CommandsMins
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:106: error: incompatible types: String cannot be converted to List<String>
            List<String> w = words.get(wi);
                                      ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:111: error: incompatible types: String cannot be converted to List<String>
                List<String> cmd = commands.get(ci);
                                               ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:113: error: cannot find symbol
                    Object c = upper(cmd);
                               ^
  symbol:   method upper(List<String>)
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:114: error: cannot find symbol
                    Object ww = upper(w);
                                ^
  symbol:   method upper(List<String>)
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:115: error: cannot find symbol
                    if (Objects.equals(c.substring(0, wlen), ww)) {
                                        ^
  symbol:   method substring(int,int)
  location: variable c of type Object
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:116: error: incompatible types: Object cannot be converted to String
                        results.add(c);
                                    ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:131: error: incompatible types: String cannot be converted to int
        int table = "" + "add 1  alter 3  backup 2  bottom 1  Cappend 2  change 1  Schange  Cinsert 2  Clast 3 " + "compress 4 copy 2 count 3 Coverlay 3 cursor 3  delete 3 Cdelete 2  down 1  duplicate " + "3 xEdit 1 expand 3 extract 3  find 1 Nfind 2 Nfindup 6 NfUP 3 Cfind 2 findUP 3 fUP 2 " + "forward 2  get  help 1 hexType 4  input 1 powerInput 3  join 1 split 2 spltJOIN load " + "locate 1 Clocate 2 lowerCase 3 upperCase 3 Lprefix 2  macro  merge 2 modify 3 move 2 " + "msg  next 1 overlay 1 parse preserve 4 purge 3 put putD query 1 quit  read recover 3 " + "refresh renum 3 repeat 3 replace 1 Creplace 2 reset 3 restore 4 rgtLEFT right 2 left " + "2  save  set  shift 2  si  sort  sos  stack 3 status 4 top  transfer 3  type 1  up 1 ";
                    ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:133: error: cannot find symbol
        Map<String,any> tbl = readTable(table);
                   ^
  symbol:   class any
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:133: error: incompatible types: int cannot be converted to String
        Map<String,any> tbl = readTable(table);
                                        ^
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:134: error: cannot find symbol
        List<String> commands = (List<String>)((any)tbl.get("commands"));
                                                ^
  symbol:   class any
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:135: error: cannot find symbol
        List<Integer> mins = (List<Integer>)((any)tbl.get("mins"));
                                              ^
  symbol:   class any
  location: class AbbreviationsSimple
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:143: error: cannot find symbol
                out1 = out1 + ((Number)padRight(words.get(k), results.get(k).size())).doubleValue();
                                                                            ^
  symbol:   method size()
  location: class String
/tmp/TestMochiToJavaabbreviations-simple2249550606/001/AbbreviationsSimple.java:146: error: incompatible types: String cannot be converted to Number
                out1 = out1 + ((Number)words.get(k)).doubleValue();
                                                ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
20 errors
